--- a/eellljs.html
+++ b/eellljs.html
@@ -333,14 +333,16 @@ function do_img_preload() {
  &nbsp;
  <label for="tx_log_cgi">URL</label>
  <input type="text" size="24" value="" title="送信先 URL を指定します"
+  lang="en"
   id="tx_log_cgi" name="cgi">
  &nbsp;
  <label for="tx_log_user">user</label>
  <input type="text" size="24" id="tx_log_user" name="user" value=""
+  lang="en"
   title="ユーザ名を指定します">
  <input type="hidden" id="tx_log_date" name="date" value="">
  <input type="hidden" id="tx_log_eljs" name="eljs"
-  value="eelll/JS v0.2">	<!-- version/ -->
+  value="eelll/JS v0.2.3">	<!-- version/ -->
 </div>
 </form>
 <hr>
@@ -535,7 +537,8 @@ function do_img_preload() {
 <span>
 <!-- 入力欄 -->
 <!-- XXX -->
- <input type="text" size="50" id="tx_stdin" name="tx_stdin"
+ <input type="text" size="70" id="tx_stdin" name="tx_stdin"
+  lang="en"
   title="[入力欄] ここに入力します"
   style="color: white;"
   accesskey="j"
@@ -568,8 +571,8 @@ function do_img_preload() {
 <hr>
 
 <div class="version">
-eelll/JS version <!-- version -->0.2.2<!-- /version -->
-<!-- time-stamp-start -->2007-04-19 yuse<!-- time-stamp-end -->
+eelll/JS version <!-- version -->0.2.3<!-- /version -->
+<!-- time-stamp-start -->2009-05-21 yuse<!-- time-stamp-end -->
 </div>
 
 </body>
