--- a/kanchokujs.html
+++ b/kanchokujs.html
@@ -307,6 +307,7 @@
  style="width: 800px;"
  > <!-- XXX -->
 <input type="text" value="" size="200"
+ lang="en"
  id="tx_stdin" name="input"
  title="コードを入力します"
  accesskey="j"
@@ -402,8 +403,8 @@
 <hr>
 
 <div class="version">
-KANCHOKU/JS version <!-- version -->0.2.2<!-- /version -->
-<!-- time-stamp-start -->2007-04-19 yuse<!-- time-stamp-end -->
+KANCHOKU/JS version <!-- version -->0.2.3<!-- /version -->
+<!-- time-stamp-start -->2009-05-21 yuse<!-- time-stamp-end -->
 </div>
 
 </body>
