--- a/index.html
+++ b/index.html
@@ -754,8 +754,8 @@ GNU GPL ライセンス。
 <h2><a name="sec_download">ダウンロード</a></h2>
 
 <ul>
- <li> <a href="http://www.sato.kuis.kyoto-u.ac.jp/~yuse/tcode/eljs/archive/eljs022.tar.gz"
-      >eljs022.tar.gz</a> (464KB)
+ <li> <a href="http://www.sato.kuis.kyoto-u.ac.jp/~yuse/tcode/eljs/archive/eljs023.tar.gz"
+      >eljs023.tar.gz</a> (464KB)
       <!--
       <br>
       symbolic link を使っていますので、
@@ -780,6 +780,21 @@ GNU GPL ライセンス。
 <h2><a name="sec_history">履歴</a></h2>
 
 <dl>
+ <dt>2009-05-21</dt>
+ <dd>
+      eelll/JS v.0.2.3
+      <br>
+      入力欄 &lt;input type="text"...&gt; に lang="en" を追加
+      (thanks to 石原和音さん)
+      </dd>
+
+ <dt>2007-04-19</dt>
+ <dd>
+      eelll/JS v0.2.2
+      <br>
+      副産物に <a href="kanchokujs.html">漢直/JS<a>。
+      </dd>
+
  <dt>2006-04-28</dt>
  <dd>
       eelll/JS v0.2
@@ -815,7 +830,7 @@ GNU GPL ライセンス。
 [<a href="..">もどる</a>]
 </div>
 <div class="version">
-<!-- time-stamp-start -->2007-04-22 yuse<!-- time-stamp-end -->
+<!-- time-stamp-start -->2009-05-21 yuse<!-- time-stamp-end -->
 </div>
 
 </body>
